@@ -16,7 +16,10 @@
 
 ARG BASE=alpine:3.12
 FROM ${BASE} as builder
-RUN apk add --update --no-cache build-base wget git gcc cmake make yaml-dev libcurl curl-dev libmicrohttpd-dev util-linux-dev ncurses-dev
+RUN wget https://iotech.jfrog.io/artifactory/alpine/KEY/support@iotechsys.com-5b990dd9.pub -O /etc/apk/keys/support@iotechsys.com-5b990dd9.pub
+RUN echo 'https://iotech.jfrog.io/artifactory/alpine/alpine-3.12' >> /etc/apk/repositories
+RUN apk add --update --no-cache build-base wget git gcc cmake make yaml-dev libcurl curl-dev libmicrohttpd-dev util-linux-dev ncurses-dev paho-mqtt-c-dev
+
 
 ENV CBOR_VERSION=0.5.0
 RUN mkdir /tmp/cbor \
@@ -41,7 +44,9 @@ RUN cd /tmp/sdk \
 FROM ${BASE}
 LABEL maintainer="IOTech <support@iotechsys.com>"
 
-RUN apk add --update --no-cache build-base wget git gcc cmake make yaml curl libmicrohttpd libuuid
+RUN wget https://iotech.jfrog.io/artifactory/alpine/KEY/support@iotechsys.com-5b990dd9.pub -O /etc/apk/keys/support@iotechsys.com-5b990dd9.pub
+RUN echo 'https://iotech.jfrog.io/artifactory/alpine/alpine-3.12' >> /etc/apk/repositories
+RUN apk add --update --no-cache build-base wget git gcc cmake make yaml curl libmicrohttpd libuuid paho-mqtt-c-dev
 
 COPY --from=builder /usr/local/include/iot /usr/local/include/iot
 COPY --from=builder /usr/local/include/edgex /usr/local/include/edgex
