@@ -31,7 +31,7 @@ CSDK_HAVE_ATOMIC)
 # Set default files to compile and libraries
 
 file (GLOB C_FILES *.c iot/*.c)
-set (LINK_LIBRARIES ${LIBMICROHTTP_LIBRARIES} ${CURL_LIBRARIES} ${LIBYAML_LIBRARIES} ${LIBUUID_LIBRARIES} ${LIBCBOR_LIBRARIES})
+set (LINK_LIBRARIES ${LIBMICROHTTP_LIBRARIES} ${CURL_LIBRARIES} ${LIBYAML_LIBRARIES} ${LIBUUID_LIBRARIES} ${LIBCBOR_LIBRARIES} ${LIBPAHO_LIBRARIES})
 if (NOT CSDK_HAVE_ATOMIC)
   list (APPEND LINK_LIBRARIES atomic)
 endif ()
